Added Lazy Loading and Solved N+1 Problem